--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
         "target": "ES2022",
-        "outDir": "../magic/scripts"
+        "outDir": "../scripts"
     }
 }
